src/main/parsers/actonParser.java
// Generated from D:/Programming/Compiler/2/Acton/src\acton.g4 by ANTLR 4.7.2
package main.parsers;

    import main.*;
    //import main.ast.*;
    import main.ast.node.*;
    import main.ast.node.declaration.*;
    import main.ast.node.declaration.handler.*;
    import main.ast.node.expression.*;
    import main.ast.node.expression.operators.*;
    import main.ast.node.expression.values.*;
    import main.ast.node.statement.*;
    import main.ast.type.*;
    import main.ast.type.actorType.*;
    import main.ast.type.arrayType.*;
    import main.ast.type.primitiveType.*;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class actonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTVAL=1, STRINGVAL=2, TRUE=3, FALSE=4, INT=5, BOOLEAN=6, STRING=7, ACTOR=8, 
		EXTENDS=9, ACTORVARS=10, KNOWNACTORS=11, INITIAL=12, MSGHANDLER=13, SENDER=14, 
		SELF=15, MAIN=16, FOR=17, CONTINUE=18, BREAK=19, IF=20, ELSE=21, PRINT=22, 
		LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, LBRACKET=27, RBRACKET=28, 
		COLON=29, SEMICOLON=30, COMMA=31, DOT=32, ASSIGN=33, EQ=34, NEQ=35, GT=36, 
		LT=37, PLUSPLUS=38, MINUSMINUS=39, PLUS=40, MINUS=41, MULT=42, DIV=43, 
		PERCENT=44, NOT=45, AND=46, OR=47, QUES=48, IDENTIFIER=49, COMMENT=50, 
		WHITESPACE=51;
	public static final int
		RULE_program = 0, RULE_actorDeclaration = 1, RULE_mainDeclaration = 2, 
		RULE_actorInstantiation = 3, RULE_initHandlerDeclaration = 4, RULE_msgHandlerDeclaration = 5, 
		RULE_argDeclarations = 6, RULE_varDeclarations = 7, RULE_varDeclaration = 8, 
		RULE_statement = 9, RULE_blockStmt = 10, RULE_printStmt = 11, RULE_assignStmt = 12, 
		RULE_assignment = 13, RULE_forStmt = 14, RULE_ifStmt = 15, RULE_elseStmt = 16, 
		RULE_continueStmt = 17, RULE_breakStmt = 18, RULE_msgHandlerCall = 19, 
		RULE_expression = 20, RULE_orExpression = 21, RULE_andExpression = 22, 
		RULE_equalityExpression = 23, RULE_relationalExpression = 24, RULE_additiveExpression = 25, 
		RULE_multiplicativeExpression = 26, RULE_preUnaryExpression = 27, RULE_postUnaryExpression = 28, 
		RULE_postUnaryOp = 29, RULE_otherExpression = 30, RULE_arrayCall = 31, 
		RULE_actorVarAccess = 32, RULE_expressionList = 33, RULE_identifier = 34, 
		RULE_value = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "actorDeclaration", "mainDeclaration", "actorInstantiation", 
			"initHandlerDeclaration", "msgHandlerDeclaration", "argDeclarations", 
			"varDeclarations", "varDeclaration", "statement", "blockStmt", "printStmt", 
			"assignStmt", "assignment", "forStmt", "ifStmt", "elseStmt", "continueStmt", 
			"breakStmt", "msgHandlerCall", "expression", "orExpression", "andExpression", 
			"equalityExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"preUnaryExpression", "postUnaryExpression", "postUnaryOp", "otherExpression", 
			"arrayCall", "actorVarAccess", "expressionList", "identifier", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'true'", "'false'", "'int'", "'boolean'", "'string'", 
			"'actor'", "'extends'", "'actorvars'", "'knownactors'", "'initial'", 
			"'msghandler'", "'sender'", "'self'", "'main'", "'for'", "'continue'", 
			"'break'", "'if'", "'else'", "'print'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "':'", "';'", "','", "'.'", "'='", "'=='", "'!='", "'>'", "'<'", 
			"'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
			"'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTVAL", "STRINGVAL", "TRUE", "FALSE", "INT", "BOOLEAN", "STRING", 
			"ACTOR", "EXTENDS", "ACTORVARS", "KNOWNACTORS", "INITIAL", "MSGHANDLER", 
			"SENDER", "SELF", "MAIN", "FOR", "CONTINUE", "BREAK", "IF", "ELSE", "PRINT", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COLON", 
			"SEMICOLON", "COMMA", "DOT", "ASSIGN", "EQ", "NEQ", "GT", "LT", "PLUSPLUS", 
			"MINUSMINUS", "PLUS", "MINUS", "MULT", "DIV", "PERCENT", "NOT", "AND", 
			"OR", "QUES", "IDENTIFIER", "COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "acton.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public actonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program p;
		public ActorDeclarationContext x1;
		public MainDeclarationContext x2;
		public MainDeclarationContext mainDeclaration() {
			return getRuleContext(MainDeclarationContext.class,0);
		}
		public List<ActorDeclarationContext> actorDeclaration() {
			return getRuleContexts(ActorDeclarationContext.class);
		}
		public ActorDeclarationContext actorDeclaration(int i) {
			return getRuleContext(ActorDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

				    ((ProgramContext)_localctx).p =  new Program();
				
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73);
				((ProgramContext)_localctx).x1 = actorDeclaration();

					    _localctx.p.addActor(((ProgramContext)_localctx).x1.ret);
					
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ACTOR );
			setState(80);
			((ProgramContext)_localctx).x2 = mainDeclaration();

				    _localctx.p.setMain(((ProgramContext)_localctx).x2.ret);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorDeclarationContext extends ParserRuleContext {
		public ActorDeclaration ret;
		public Token t;
		public IdentifierContext x;
		public IdentifierContext y;
		public Token z;
		public IdentifierContext f;
		public IdentifierContext g;
		public VarDeclarationsContext h;
		public InitHandlerDeclarationContext i;
		public MsgHandlerDeclarationContext k;
		public TerminalNode LPAREN() { return getToken(actonParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(actonParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(actonParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(actonParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(actonParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(actonParser.RBRACE, i);
		}
		public TerminalNode ACTOR() { return getToken(actonParser.ACTOR, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode INTVAL() { return getToken(actonParser.INTVAL, 0); }
		public TerminalNode KNOWNACTORS() { return getToken(actonParser.KNOWNACTORS, 0); }
		public TerminalNode ACTORVARS() { return getToken(actonParser.ACTORVARS, 0); }
		public TerminalNode EXTENDS() { return getToken(actonParser.EXTENDS, 0); }
		public VarDeclarationsContext varDeclarations() {
			return getRuleContext(VarDeclarationsContext.class,0);
		}
		public InitHandlerDeclarationContext initHandlerDeclaration() {
			return getRuleContext(InitHandlerDeclarationContext.class,0);
		}
		public List<MsgHandlerDeclarationContext> msgHandlerDeclaration() {
			return getRuleContexts(MsgHandlerDeclarationContext.class);
		}
		public MsgHandlerDeclarationContext msgHandlerDeclaration(int i) {
			return getRuleContext(MsgHandlerDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(actonParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(actonParser.SEMICOLON, i);
		}
		public ActorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterActorDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitActorDeclaration(this);
		}
	}

	public final ActorDeclarationContext actorDeclaration() throws RecognitionException {
		ActorDeclarationContext _localctx = new ActorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actorDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((ActorDeclarationContext)_localctx).t = match(ACTOR);
			setState(84);
			((ActorDeclarationContext)_localctx).x = identifier();

				    ((ActorDeclarationContext)_localctx).ret =  new ActorDeclaration(((ActorDeclarationContext)_localctx).x.ret);
				    _localctx.ret.setLine(((ActorDeclarationContext)_localctx).t.getLine());
				
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(86);
				match(EXTENDS);
				setState(87);
				((ActorDeclarationContext)_localctx).y = identifier();

				        _localctx.ret.setParentName(((ActorDeclarationContext)_localctx).y.ret);
					
				}
			}

			setState(92);
			match(LPAREN);
			setState(93);
			((ActorDeclarationContext)_localctx).z = match(INTVAL);

			        _localctx.ret.setQueueSize((((ActorDeclarationContext)_localctx).z!=null?Integer.valueOf(((ActorDeclarationContext)_localctx).z.getText()):0));
				
			setState(95);
			match(RPAREN);
			setState(96);
			match(LBRACE);
			{
			setState(97);
			match(KNOWNACTORS);
			setState(98);
			match(LBRACE);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(99);
				((ActorDeclarationContext)_localctx).f = identifier();
				setState(100);
				((ActorDeclarationContext)_localctx).g = identifier();
				setState(101);
				match(SEMICOLON);

				            VarDeclaration knownActor = new VarDeclaration(((ActorDeclarationContext)_localctx).g.ret, new ActorType(((ActorDeclarationContext)_localctx).f.ret));
				            knownActor.setLine(((ActorDeclarationContext)_localctx).f.ret.getLine());
						    _localctx.ret.addKnownActor(knownActor);
						
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(RBRACE);
			}
			{
			setState(111);
			match(ACTORVARS);
			setState(112);
			match(LBRACE);
			setState(113);
			((ActorDeclarationContext)_localctx).h = varDeclarations();
			setState(114);
			match(RBRACE);
			}

				    if(((ActorDeclarationContext)_localctx).h.ret != null)
				        _localctx.ret.setActorVars(((ActorDeclarationContext)_localctx).h.ret);
				
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(117);
				((ActorDeclarationContext)_localctx).i = initHandlerDeclaration();

					    _localctx.ret.setInitHandler(((ActorDeclarationContext)_localctx).i.ret);
					
				}
				break;
			}
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MSGHANDLER) {
				{
				{
				setState(122);
				((ActorDeclarationContext)_localctx).k = msgHandlerDeclaration();

					    _localctx.ret.addMsgHandler(((ActorDeclarationContext)_localctx).k.ret);
					 
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclarationContext extends ParserRuleContext {
		public Main ret;
		public Token t;
		public ActorInstantiationContext x1;
		public TerminalNode LBRACE() { return getToken(actonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(actonParser.RBRACE, 0); }
		public TerminalNode MAIN() { return getToken(actonParser.MAIN, 0); }
		public List<ActorInstantiationContext> actorInstantiation() {
			return getRuleContexts(ActorInstantiationContext.class);
		}
		public ActorInstantiationContext actorInstantiation(int i) {
			return getRuleContext(ActorInstantiationContext.class,i);
		}
		public MainDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterMainDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitMainDeclaration(this);
		}
	}

	public final MainDeclarationContext mainDeclaration() throws RecognitionException {
		MainDeclarationContext _localctx = new MainDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    ((MainDeclarationContext)_localctx).ret =  new Main();

			setState(133);
			((MainDeclarationContext)_localctx).t = match(MAIN);
			_localctx.ret.setLine(((MainDeclarationContext)_localctx).t.getLine());
			setState(135);
			match(LBRACE);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(136);
				((MainDeclarationContext)_localctx).x1 = actorInstantiation();

				    _localctx.ret.addActorInstantiation(((MainDeclarationContext)_localctx).x1.ret);

				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorInstantiationContext extends ParserRuleContext {
		public ActorInstantiation ret;
		public IdentifierContext x1;
		public IdentifierContext x2;
		public Token t;
		public IdentifierContext x3;
		public IdentifierContext x4;
		public ExpressionListContext x5;
		public List<TerminalNode> RPAREN() { return getTokens(actonParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(actonParser.RPAREN, i);
		}
		public TerminalNode COLON() { return getToken(actonParser.COLON, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(actonParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(actonParser.LPAREN, i);
		}
		public TerminalNode SEMICOLON() { return getToken(actonParser.SEMICOLON, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(actonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(actonParser.COMMA, i);
		}
		public ActorInstantiationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorInstantiation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterActorInstantiation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitActorInstantiation(this);
		}
	}

	public final ActorInstantiationContext actorInstantiation() throws RecognitionException {
		ActorInstantiationContext _localctx = new ActorInstantiationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actorInstantiation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			((ActorInstantiationContext)_localctx).x1 = identifier();
			setState(147);
			((ActorInstantiationContext)_localctx).x2 = identifier();

			        ((ActorInstantiationContext)_localctx).ret =  new ActorInstantiation(new ActorType(((ActorInstantiationContext)_localctx).x1.ret), ((ActorInstantiationContext)_localctx).x2.ret);
				
			setState(149);
			((ActorInstantiationContext)_localctx).t = match(LPAREN);
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(150);
				((ActorInstantiationContext)_localctx).x3 = identifier();

						    _localctx.ret.setLine(((ActorInstantiationContext)_localctx).t.getLine());
						    _localctx.ret.addKnownActor(((ActorInstantiationContext)_localctx).x3.ret);
						
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(152);
					match(COMMA);
					setState(153);
					((ActorInstantiationContext)_localctx).x4 = identifier();
